2014-03-04  Niels Möller  <nisse@lysator.liu.se>

	* chacha128-set-key.c (chacha128_set_key): Deleted file and
	function. Support for 128-bit chacha keys may be reintroduced
	later, if really needed.
	* chacha.h: Deleted chacha128-related declarations.
	* chacha-set-key.c (chacha_set_key): Drop support for 128-bit
	keys.
	* testsuite/chacha-test.c (test_main): #if:ed out all tests with
	128-bit keys.

2014-02-16  Niels Möller  <nisse@lysator.liu.se>

	* gcm.h: Declarations for gcm-camellia256.
	* gcm-camellia256.c: New file.
	* gcm-camellia256-meta.c: New file.
	* nettle-meta.h (nettle_gcm_camellia256): Declare.
	* Makefile.in (nettle_SOURCES): Added gcm-camellia256.c and
	gcm-camellia256-meta.c.
	* testsuite/gcm-test.c (test_main): Test cases for
	nettle_gcm_camellia256.

	* gcm.h: Include camellia.h. Declarations for gcm-camellia128.
	* gcm-camellia128.c: New file.
	* gcm-camellia128-meta.c: New file.
	* nettle-meta.h (nettle_gcm_camellia128): Declare.
	* Makefile.in (nettle_SOURCES): Added gcm-camellia128.c and
	gcm-camellia128-meta.c.
	* testsuite/gcm-test.c (test_main): Test cases for
	nettle_gcm_camellia128. From Nikos Mavrogiannopoulos.

2014-02-13  Niels Möller  <nisse@lysator.liu.se>

	* Makefile.in (nettle_SOURCES): Added eax-aes128.c
	eax-aes128-meta.c.
	* examples/nettle-benchmark.c: Include eax.h.
	* nettle-meta.h (nettle_eax_aes128): Declare, moved from
	nettle-internal.h.
	* eax.h: Declare eax_aes128_ctx and related functions. Moved from
	nettle-internal.h
	(EAX_IV_SIZE): New constant.
	* eax-aes128-meta.c (nettle_eax_aes128): Moved definition to new
	file.
	* eax-aes128.c (eax_aes128_set_key, eax_aes128_set_nonce)
	(eax_aes128_update, eax_aes128_encrypt, eax_aes128_decrypt)
	(eax_aes128_digest): Moved functions to a new file.
	* nettle-internal.c: ... from old location.
	* nettle-internal.h: Moved eax declarations elsewhere.

	* tools/nettle-pbkdf2.c (main): Added missing deallocation.

2014-02-12  Niels Möller  <nisse@lysator.liu.se>
