@@ -37,17 +37,13 @@ extern "C" {
 
 /* Name mangling */
 #define chacha_set_key nettle_chacha_set_key
-#define chacha256_set_key nettle_chacha256_set_key
 #define chacha_set_nonce nettle_chacha_set_nonce
 #define chacha_crypt nettle_chacha_crypt
 #define _chacha_core _nettle_chacha_core
 
-/* Possible keysizes, and a reasonable default. In octets. */
-#define CHACHA256_KEY_SIZE 32
+/* Currently, only 256-bit keys are supported. */
 #define CHACHA_KEY_SIZE 32
-
 #define CHACHA_BLOCK_SIZE 64
-
 #define CHACHA_NONCE_SIZE 8
 
 #define _CHACHA_STATE_LENGTH 16
@@ -69,11 +65,7 @@ struct chacha_ctx
 };
 
 void
-chacha256_set_key(struct chacha_ctx *ctx, const uint8_t *key);
-
-void
-chacha_set_key(struct chacha_ctx *ctx,
-	       size_t length, const uint8_t *key);
+chacha_set_key(struct chacha_ctx *ctx, const uint8_t *key);
 
 void
 chacha_set_nonce(struct chacha_ctx *ctx, const uint8_t *nonce);
